fdo#76294: Intern strings in AddFormulaToken() as well.

And a whole bunch of changes needed to make that happen.

Change-Id: Idd98fbc99322c0d72fb0a7848d89cb1a6abc88b6