sc/inc/tokenarray.hxx
@@ -83,7 +83,10 @@ public:
                                 const ScAddress& rPos, ScDirection );
 
     formula::FormulaToken* AddRawToken( const ScRawToken& );
-    virtual bool AddFormulaToken(const com::sun::star::sheet::FormulaToken& _aToken,formula::ExternalReferenceHelper* _pRef) SAL_OVERRIDE;
+    virtual bool AddFormulaToken(
+        const css::sheet::FormulaToken& rToken,
+        svl::SharedStringPool& rSPool,
+        formula::ExternalReferenceHelper* _pRef) SAL_OVERRIDE;
     virtual void CheckToken( const formula::FormulaToken& r ) SAL_OVERRIDE;
     virtual formula::FormulaToken* AddOpCode( OpCode eCode ) SAL_OVERRIDE;
     /** ScSingleRefToken with ocPush. */
